# chess-app

./: Cargo.toml  Dockerfile.api  Dockerfile.engine  docker-compose.yml
api/: Cargo.toml
api/src/: main.rs
cli/: Cargo.toml
engine/: Cargo.toml
engine/src/: attack.rs  bishop_moves.rs  bitboard.rs  board.rs  eval.rs  eval_endgame.rs  eval_king.rs  eval_mobility.rs  eval_passed.rs  eval_pawns.rs  eval_phase.rs  eval_pieces.rs  eval_pst.rs  eval_space.rs  fen.rs  game.rs  iterative_deepening.rs  king_moves.rs  knight_moves.rs  legal.rs  lib.rs  main.rs  make_move.rs  move_ordering.rs  movegen.rs  moves.rs  nullmove.rs  pawn_moves.rs  perft.rs  pieces.rs  queen_moves.rs  quiescence.rs  rook_moves.rs  search.rs  search_best_move.rs  time_manager.rs  transposition_table.rs  uci.rs  unmake_move.rs  zobrist.rs
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  run-both.sh
frontend/src/: App.jsx  Chessboard.jsx  gameLogic.js  index.css  main.jsx  styles.css
