[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }

# Latest stable Tokio 1.x
tokio = { version = "1.40", features = ["full"] }

# Latest Axum 0.8.x
axum = "0.8"

# Latest Serde 1.x
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
